Fixed H1 Spacing, added question line height, question spacing.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -67,7 +67,7 @@ body {
 
 h1 {
     margin: 0;
-    padding: 150px 0 0 0;
+    // padding: 150px 0 0 0;
     font-family: 'Terminator Real NFI', 'Merriweather', serif;
     font-size: 9rem;
     // text-align: center;
@@ -76,11 +76,22 @@ h1 {
 }
 
 h2 {
-    font-family: 'Brawler', serif;
+    font-family: 'Terminator Real NFI', 'Merriweather', serif;
     text-transform: uppercase;
-    border: 2px solid black;
-    border-radius: 2px;
+    font-size: 3rem;
+    // border: 2px solid black;
+    // border-radius: 2px;
     display: inline-block;
+}
+
+.question-text {
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+.question-form label {
+    font-size: 1.8rem;
+    margin-left: 10px;
 }
 
 // label {
@@ -95,62 +106,21 @@ h2 {
 // ========================
 
 
-
-
-
-.question-container {
-    max-height: 100vh;
-    margin-top: 700px;
-}
-
-.question-container:first-child {
-    margin-top: 0;
-}
-
-.arnold-head-image-container {
-    width: 20%;
-}
-
-.arnold-head-image {
-    display: block;
-    width: 100%;
-}
-
-.hide {
-    display: none;
-}
-
-// video {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
+// GETTING RID OF THE HEAD IMAGE
+// .arnold-head-image-container {
+//     width: 20%;
 // }
 
-video {
-    position: fixed;
-    // width: 100%;
-    // height: 100vh;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 10;
-}
-// iframe {
-//   position:absolute;
-//   top:0;
-//   left:0;
-//   width:100%; 
-//   height:100%;
-//   z-index: 5;
+// .arnold-head-image {
+//     display: block;
+//     width: 100%;
 // }
-
-
 // ========================
 // HEADER STARTS
 .header {
     height: 100vh;
     background-color: #888bac;
+    padding-top: 200px;
 }
 
 .header-content-container {
@@ -167,7 +137,7 @@ video {
     // display: flex;
     // flex-direction: column;
     // text-align: center;
-    width: 50%;
+    width: 57%;
 }
 
 .header-image-container {
@@ -186,16 +156,60 @@ video {
 .start-game-button {
     font-size: 3rem;
     // width: 215px;
-    border-radius: 20px;
-    padding: 20px;
+    border-radius: 5px;
+    padding: 12px 15px;
     margin-top: 12px;
+}
+
+.game-header-small-container {
+    position: fixed;
+    top: 0;
+    left: 220px;
+}
+
+.hide {
+    display: none;
+}
+
+.video-header {
+    position: fixed;
+    // width: 100%;
+    // height: 100vh;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 10;
 }
 // HEADER ENDS
 // ========================
 
 // ========================
 // MAIN STARTS
+// ==Questions Section STARTS==
+.question-container {
+    height: 100vh;
+    margin-top: 700px;
+    display: flex;
+    padding-top: 150px;
+    // justify-content: center;
+    // align-items: center;
+}
 
+.question-container:first-child {
+    margin-top: 0;
+}
+
+.question-form {
+    width: 65%;
+    margin-bottom: 10px;
+}
+
+.question-text {
+    margin-bottom: 35px;
+    line-height: 30px;
+}
+// ==Question Section ENDS==
 // MAIN ENDS
 // ========================
 
